<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/wavRecorderFragment"
        android:icon="@drawable/ic_microphone"
        android:title="@string/main_menu_list" />
    <item
        android:id="@+id/play_list_fragment"
        android:icon="@drawable/ic_speaker"
        android:title="@string/main_menu_favourites"
        />
<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_info_black_24dp"-->
<!--        android:title="@string/main_menu_about"-->
<!--        />-->

    <item
        android:id="@+id/storageFragment"
        android:icon="@drawable/ic_storage"
        android:title="@string/storage"
        />
</menu>
