<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rename_song_scrollv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_white">

    <LinearLayout
        android:id="@+id/rename_song_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/song_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/song_artist_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist" />

        <EditText
            android:id="@+id/song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="14sp" />

        <!--        <TextView-->
        <!--            android:id="@+id/file_name_label"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/filename"/>-->

        <!--        <EditText-->
        <!--            android:id="@+id/file_name"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="@dimen/activity_margin"-->
        <!--            android:singleLine="true"-->
        <!--            android:textCursorDrawable="@null"-->
        <!--            android:textSize="@dimen/normal_text_size"/>-->

        <TextView
            android:id="@+id/extension_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name" />

        <EditText
            android:id="@+id/album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="14sp" />


    </LinearLayout>
</ScrollView>
